-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 8.0.0
User informed that:
"
The Docker experimental QtCreator plugin, expecially starting from version 8.0.0.0, cannot detect anymore the docker container "compilers" and "Qt Version" anymore when clicking on the button "Auto-detect Kit Items". It detects correclty only the CMake binary on the container.
Note that the docker container instance is correclty running.
I have looked at the source code but I have not hints how it is supposed to work.
https://github.com/qt-creator/qt-creator/blob/8.0/src/plugins/docker/kitdetector.cpp#L323
In QtCreator 7.0.2 this was working half of the times.
"
For Gerrit Dashboard: QTCREATORBUG-27985 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
439177,1 | Debugger: Auto-detect arch64-poky-linux-gdb | 9.0 | qt-creator/qt-creator | Status: ABANDONED | 0 | 0 |